Progress update, added new classes and updated UI

--- a/Korz/resources.qrc
+++ b/Korz/resources.qrc
@@ -4,5 +4,6 @@
         <file>Icons/gun_icon.png</file>
         <file>Icons/trak2_panel2c.tga</file>
         <file>Icons/trak2_plate2b.tga</file>
+        <file>Icons/compass.png</file>
     </qresource>
 </RCC>
