--- a/Korz/resources.qrc
+++ b/Korz/resources.qrc
@@ -5,5 +5,8 @@
         <file>Icons/trak2_panel2c.tga</file>
         <file>Icons/trak2_plate2b.tga</file>
         <file>Icons/compass.png</file>
+        <file>Icons/wooden_crate.png</file>
+        <file>Rooms/tutorial_room.png</file>
+        <file>Icons/soldier.png</file>
     </qresource>
 </RCC>
