Story Thread added to handle the scripted text messages

--- a/Korz/resources.qrc
+++ b/Korz/resources.qrc
@@ -8,5 +8,6 @@
         <file>Icons/wooden_crate.png</file>
         <file>Rooms/tutorial_room.png</file>
         <file>Icons/soldier.png</file>
+        <file>Icons/soldier-left.png</file>
     </qresource>
 </RCC>
