--- a/Korz/resources.qrc
+++ b/Korz/resources.qrc
@@ -17,5 +17,20 @@
         <file>Icons/enemy.png</file>
         <file>Icons/enemy_left_dead.png</file>
         <file>Icons/enemy_right_dead.png</file>
+        <file>Sounds/gun_shot.wav</file>
+        <file>Sounds/shotgun_shot.wav</file>
+        <file>Icons/assault_enemy.png</file>
+        <file>Icons/assault_enemy_left.png</file>
+        <file>Icons/rocket_enemy.png</file>
+        <file>Icons/rocket_enemy_left.png</file>
+        <file>Icons/missile.png</file>
+        <file>Icons/missile_left.png</file>
+        <file>Sounds/missile.wav</file>
+        <file>Sounds/smg.wav</file>
+        <file>Sounds/explosion.wav</file>
+        <file>Rooms/room_1.png</file>
+        <file>Rooms/room_2.png</file>
+        <file>Rooms/room_3.png</file>
+        <file>Rooms/room_4.png</file>
     </qresource>
 </RCC>
